--- a/apps/symlink-cleaner/dev/Dockerfile
+++ b/apps/symlink-cleaner/dev/Dockerfile
@@ -33,16 +33,21 @@ COPY --chown=568:568 --from=cloner /source/templates/ /app/templates/
 COPY --chown=568:568 --from=cloner /source/static/ /app/static/
 COPY --chown=568:568 --from=cloner /source/gunicorn_config.py /app/
 
-# Create default config directory and file if not mounted
-RUN mkdir -p /app/config && \
+# Create default config directory and file if not mounted, plus storage paths
+RUN mkdir -p /app/config /storage/realdebrid-zurg/__all__ \
+    /storage/symlinks/anime_movies /storage/symlinks/anime_shows \
+    /storage/symlinks/movies /storage/symlinks/movies-4k \
+    /storage/symlinks/series /storage/symlinks/series-4k \
+    /storage/symlinks/shows && \
     echo '{"debrid_mount": "/dummy/debrid_mount", "symlink_dirs": ["/dummy/symlink_dir"], "mode": "repair", "monitor_mode": "repair", "enable_monitoring": false, "dry_run": false, "version": "1.4.7", "media_servers": {"plex": {"enabled": false, "host": "", "library_id": "", "token": ""}, "emby": {"enabled": false, "host": "", "api_key": ""}, "jellyfin": {"enabled": false, "host": "", "api_key": ""}}, "clean_batch_size": 100, "clean_delay": 1}' > /app/config/config.json && \
     mkdir -p /dummy/debrid_mount /dummy/symlink_dir && \
-    chown -R 568:568 /app /dummy
+    chown -R 568:568 /app /dummy /storage && \
+    ls -l /app/templates/ && test -f /app/templates/index.html || (echo "ERROR: index.html not found" && exit 1)
 
 USER 568
 EXPOSE 5000
 
-HEALTHCHECK --interval=30s --timeout=5s --start-period=30s --retries=3 \
+HEALTHCHECK --interval=30s --timeout=5s --start-period=60s --retries=3 \
   CMD curl -f http://localhost:5000/ || exit 1
 
 CMD ["gunicorn", "--config", "gunicorn_config.py", "symlink_cleaner:app"]
