--- a/apps/symlink-cleaner/dev/goss.yaml
+++ b/apps/symlink-cleaner/dev/goss.yaml
@@ -4,7 +4,7 @@ process:
   gunicorn:
     running: true
 
-# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
-http:
-  http://localhost:5000/health:
-    status: 200
+# # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
+# http:
+#   http://localhost:5000/health:
+#     status: 200
