--- a/apps/radarr/dev/Dockerfile
+++ b/apps/radarr/dev/Dockerfile
@@ -8,7 +8,7 @@ ARG CHANNEL
 
 ENV \
     RADARR__INSTANCE_NAME="Radarr" \
-    RADARR__BRANCH="${CHANNEL}" \
+    RADARR__BRANCH="main" \
     RADARR__PORT="7878" \
     RADARR__ANALYTICS_ENABLED="False"
 
