--- a/apps/radarr/dev/Dockerfile
+++ b/apps/radarr/dev/Dockerfile
@@ -21,7 +21,7 @@ RUN dotnet restore src/Radarr.sln
 RUN npm install --legacy-peer-deps
 
 # Build Radarr
-RUN dotnet publish src/Radarr.Console -c Release -o /out
+RUN dotnet publish src/NzbDrone.Console.Radarr.Console -c Release -o /out
 
 # Final image
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS runtime
