--- a/apps/radarr/Dockerfile
+++ b/apps/radarr/Dockerfile
@@ -35,10 +35,10 @@ RUN echo "Cache Buster: $CACHE_BUSTER" && CGO_ENABLED=0 GOOS=linux go build -ldf
 FROM golang:1.20-alpine AS importarr
 
 # Set environment variables
-# ENV CGO_ENABLED=1 GOOS=linux GOARCH=amd64
+ENV CGO_ENABLED=1 GOOS=linux GOARCH=amd64
 
 # Install necessary build tools
-RUN apk add --no-cache git
+RUN apk add --no-cache git gcc musl-dev
 
 RUN git clone https://github.com/elfhosted/importarr.git /app
 
