--- a/apps/radarr/Dockerfile
+++ b/apps/radarr/Dockerfile
@@ -32,7 +32,7 @@ ARG CACHE_BUSTER=1
 RUN echo "Cache Buster: $CACHE_BUSTER" && CGO_ENABLED=0 GOOS=linux go build -ldflags="-s -w" -o ffprobe
 
 ############# importarr
-FROM golang:1.20-bullseye AS builder
+FROM golang:1.20-bullseye AS importarr
 
 # Install necessary build tools and SQLite dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
