--- a/apps/sonarr/Dockerfile
+++ b/apps/sonarr/Dockerfile
@@ -10,7 +10,7 @@ FROM golang:1.20-bullseye AS importarr
 
 # Install necessary build tools and SQLite dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc libc6-dev sqlite3 libsqlite3-dev musl-dev git && \
+    gcc libc6-dev sqlite3 libsqlite3-dev musl-tools musl-dev git && \
     rm -rf /var/lib/apt/lists/*
 
 # Set environment variables
