--- a/apps/huntarr/ci/goss.yaml
+++ b/apps/huntarr/ci/goss.yaml
@@ -5,10 +5,10 @@ process:
     running: true
 
 # # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
-port:
-  # https://github.com/aelsabbahy/goss/issues/149
-  tcp6:9705:
-    listening: true  
+# port:
+#   # https://github.com/aelsabbahy/goss/issues/149
+#   tcp6:9705:
+#     listening: true  
 
 http:
   http://localhost:9705:
