try switching prowlarr to postgresql
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/prowlarr/Dockerfile
+++ b/apps/prowlarr/Dockerfile
@@ -1,3 +1,28 @@
+############# importarr
+FROM golang:1.20-bullseye AS importarr
+
+# Install necessary build tools and SQLite dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc libc6-dev sqlite3 libsqlite3-dev musl musl-dev musl-tools gcc-multilib git && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN ln -s /usr/bin/musl-gcc /usr/bin/x86_64-linux-musl-gcc
+
+# Set environment variables
+ENV CGO_ENABLED=1 GOOS=linux GOARCH=amd64
+
+RUN git clone https://github.com/elfhosted/importarr.git /app
+
+# Set the working directory
+WORKDIR /app
+
+# Copy the Go module files and download dependencies
+RUN go mod download
+
+# Build the Go binary
+RUN go build -ldflags="-linkmode external -extldflags -static" -o importarr cmd/main.go
+
+
 FROM ghcr.io/elfhosted/alpine-edge:rolling@sha256:31272a3b40aa1d0e1471d0429b99ac6ef9a35d5c54aa584881b54924043f83bc
 
 ARG TARGETPLATFORM
@@ -37,6 +62,9 @@ RUN \
     && rm -rf /tmp/*
 
 ENV COMPlus_EnableDiagnostics=0
+
+COPY --from=importarr /app/importarr /usr/local/bin/importarr
+RUN chmod +x /usr/local/bin/importarr
 
 USER 568
 COPY ./apps/prowlarr/config.xml.tmpl /app/config.xml.tmpl
